Fix database.yml, mount custom in docker compose

--- a/config/database-docker-compose.yml
+++ b/config/database-docker-compose.yml
@@ -10,11 +10,13 @@ development:
   database: castle_app_development
   username: postgres
   password: postgres
+  host: db
 
 test:
   <<: *default
   database: castle_app_test
   username: postgres
+  host: db
 
 production:
   <<: *default
