--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ test:
 
 production:
   <<: *default
+  host: 10.102.127.16
   database: castle_app_production
   username: castle-app
   password: <%= ENV['CASTLE_APP_DATABASE_PASSWORD'] %>
